--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.ramanrajarathinam</groupId>
     <artifactId>native-utils</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>
@@ -40,7 +40,7 @@
         <connection>scm:git:https://github.com/RamanRajarathinam/native-utils.git</connection>
         <developerConnection>scm:git:ssh://github.com/RamanRajarathinam/native-utils.git</developerConnection>
         <url>https://github.com/RamanRajarathinam/native-utils</url>
-        <tag>native-utils-1.0.1</tag>
+        <tag>1.0.0</tag>
     </scm>
 
     <distributionManagement>
